--- a/styles/style.css
+++ b/styles/style.css
@@ -108,7 +108,7 @@ nav ul li {
 }
 
 .categories .col-3 {
-    min-width: 300px;
+    min-width: 400px;
     margin-bottom: 30px;
     position: relative;
     transition: all .5s ease-in-out;
@@ -230,7 +230,7 @@ nav ul li {
     color: #333;
     font-weight: normal;
     font-size: 16px;
-    transition: all .3s ease-in-out
+    transition: all .3s ease-in-out;
 }
 .products .col-4:hover {
     border: 1px solid brown;
@@ -486,17 +486,6 @@ footer hr {
         margin: 0 !important;
         padding: 0 !important;
     }
-
-    /* .categories .row {
-        display: flex;
-        flex-direction: row;
-        max-width: 300px;
-    }
-
-    .categories .row .col-3 {
-        width: 100%;
-        margin: 0 auto;
-    } */
 
     .products .row .col-4 .buy-me{
         flex-wrap: wrap;
