--- a/Pages/home/home.css
+++ b/Pages/home/home.css
@@ -78,19 +78,19 @@ body {
     width: 100%;
 }
 .categories .col-3 .featured-cards {
-    background: url(../images/featured-1.jpeg);
+    background: url(../home/images/featured-1.jpeg);
     background-position: center;
     background-repeat: no-repeat;
     background-image: cover;
 }
 .categories .col-3 .featured-desktops {
-    background: url(../images/featured-2.avif);
+    background: url(../home/images/featured-2.avif);
     background-position: center;
     background-repeat: no-repeat;
     background-image: cover;
 }
 .categories .col-3 .featured-accessories {
-    background: url(../images/featured-3.avif);
+    background: url(../home/images/featured-3.avif);
     background-position: center;
     background-repeat: no-repeat;
     background-image: cover;
