--- a/pages/home/styles/home.css
+++ b/pages/home/styles/home.css
@@ -78,7 +78,7 @@ body {
     width: 100%;
 }
 .categories .col-3 .featured-cards {
-    background: url(../images/featured-1.jpeg);
+    background: url(../home/images/featured-1.jpeg);
     background-position: center;
     background-repeat: no-repeat;
     background-image: cover;
