--- a/pages/components/styles/header.css
+++ b/pages/components/styles/header.css
@@ -22,6 +22,7 @@ body {
 .header nav ul li a:hover {
     color: rgb(236, 115, 115); 
 }
+
 .header nav .checkbtn {
     font-size: 25px;
     background-color: #4d4c4c;
@@ -37,8 +38,7 @@ body {
 .header .large-screen-hidden {
     display: none;
 }
-/*---- JS script for sticky header extra class ----*/
-
+/*---- JS script extra class ----*/
 .sticky {
     position: fixed;
     top: 0;
@@ -48,6 +48,7 @@ body {
     z-index: 999;
     
 }
+
 .sticky nav .first-ul li {
     font-size: 17px;
 }
@@ -55,6 +56,7 @@ body {
 .sticky img {
     width: 145px;
 }
+
 .navbar.sticky ul li a {
     font-size: 12px;
     padding: 2px;
