--- a/Pages/Accessories/styles/acc-styles.css
+++ b/Pages/Accessories/styles/acc-styles.css
@@ -1,10 +1,7 @@
 *{
-
-  box-sizing: border-box;
-}
-body{
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 /* Header */
 .header {
@@ -48,7 +45,7 @@ body{
 .navbar.sticky ul li a {
   font-size: 12px;
   padding: 2px;
-  font-size: 16px!important;
+  font-size: 16px important;
 }
 
 @media screen and (max-width: 576px) {
