--- a/pages/Accessories/styles/acc-styles.css
+++ b/pages/Accessories/styles/acc-styles.css
@@ -3,15 +3,162 @@
   padding: 0;
   box-sizing: border-box;
 }
+/* Header */
+.header {
+  background: rgba(255, 255, 255, 0);
+  position: fixed;
+  width: 100%;
+}
+.header nav ul li {
+  padding-left: 22px;
+  color: #fff;
+  font-size: 18px;
+}
+.header nav ul li a.active,
+.header nav ul li a:hover {
+  color: rgb(236, 115, 115); 
+}
+.header nav .checkbtn {
+  font-size: 25px;
+  background-color: #4d4c4c;
+  border-radius: 5px;
+  padding: 0px 5px;
+  color: #fff;
+  display: none;
+}
+.header nav #check {
+  display: none;
+  
+}
+.header .large-screen-hidden {
+  display: none;
+}
+/*---- JS script for sticky header extra class ----*/
 
+.sticky {
+  position: fixed;
+  top: 0;
+  background: rgb(82,80,80);
+  background: linear-gradient(140deg, rgba(82,80,80,1) 3%, rgba(255,255,255,1) 23%, rgba(5,5,5,0.8463760504201681) 45%, rgba(0,0,0,0.7455357142857143) 66%, rgba(139,139,139,0.8015581232492998) 86%);
+  width: 100%;
+  z-index: 999;
+  
+}
+.sticky nav .first-ul li {
+  font-size: 17px;
+}
+
+.sticky img {
+  width: 145px;
+}
+.navbar.sticky ul li a {
+  font-size: 12px;
+  padding: 2px;
+  font-size: 16px!important;
+}
+
+@media screen and (max-width: 576px) {
+  .header {
+      background-color: rgb(172, 161, 161);
+  }
+  .header nav {
+      display: flex;
+      justify-content: end;
+  }
+  .header nav .first-ul {
+      display: flex;
+      position: fixed;
+      background-color: rgb(150, 150, 150);
+      top: 90px;
+      left: 100%;
+      text-align: center;
+      flex-direction: column;
+      width: 100%;
+      transition: all .4s ease-in-out;
+  }
+  .header nav .first-ul li {
+      margin: 15px;
+  }
+  .header nav .checkbtn {
+      display: flex;
+  }
+  .header nav #check:checked ~ .first-ul {
+      left: 0;
+  }
+  .header .large-screen-hidden {
+      display: inline-block;
+  }
+  .sticky {
+      display: none;
+  }
+}
+
+@media screen and (min-width: 577px) and (max-width: 768px) {
+  .header {
+      background-color: rgb(172, 161, 161);
+  }
+  .header nav {
+      display: flex;
+  }
+  .header nav .first-ul {
+      display: flex;
+      position: fixed;
+      background-color: rgb(150, 150, 150);
+      top: 100px;
+      left: 100%;
+      text-align: center;
+      display: flex;
+      flex-direction: column;
+      width: 100%;
+      transition: all .5s ease-in-out;
+  }
+  .header nav .first-ul li {
+      margin: 15px;
+  }
+  .header nav .checkbtn {
+      display: block;
+  }
+  .header nav #check:checked ~ .first-ul {
+      left: 0;
+  }
+
+  .header .large-screen-hidden {
+      display: block;
+  }
+
+  .sticky {
+      display: none;
+  }
+}
+
+/*** SECTION 1 CONTENTS  ***/
+
+.section-1 {
+  background: rgb(0, 0, 0);
+  background: linear-gradient(342deg, rgba(0,0,0,0.9023984593837535) 50%, rgba(255,255,255,0) 100%);
+  min-height: 500px;
+}
+.banner .col-6 h1{
+  color: #fff;
+  font-size: 42px;
+  line-height: 47px;
+  margin: 25px 0;
+  text-shadow: -1px 1px 19px rgba(0,0,0,0.49);
+}
+
+.banner .col-6 p {
+  font-size: 14px;
+  color: rgb(241, 241, 241);
+  text-shadow: -1px 1px 19px rgba(0,0,0,0.49);
+} 
+
+.category{
+  margin-top: 80px;
+}
 .row{
   display: flex;
   align-items: center;
   flex-wrap: wrap;
-}
-.header{
-  background: rgb(40,67,181);
-background: radial-gradient(circle, rgba(40,67,181,0.03405112044817926) 16%, rgba(40,128,181,0.5886729691876751) 64%);
 }
 .col-4{
   flex-basis: 25%;
@@ -21,25 +168,6 @@ background: radial-gradient(circle, rgba(40,67,181,0.03405112044817926) 16%, rgb
   transition: transform 0.5s;
   
 }
-.title{
-  text-align: center;
-  margin: 0 auto 80px;
-  position: relative;
-  line-height: 60px;
-  color: #555;
-  padding-bottom: 30px;
-}
-.title::after{
-  content: '';
-  background: #ff523b;
-  width: 80px;
-  height: 5px;
-  border-radius: 5px;
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-}
 h4{
   padding-top: 50px;
   color: #555;
@@ -48,9 +176,39 @@ h4{
 .col-4:hover{
   transform: translateY(-5px);
 }
+.acss .col-4 {
+  flex-basis: 25%;
+  padding: 30px;
+  min-width: 100px;
+  border: 1px solid #fff;
+  transition: border .5s;
+  transition: transform .5s;
+}
+
+.acss .col-4:hover {
+  border: 1px solid brown;
+  transform: translateY(-20px);
+}
+
+.acss .col-4 img {
+  width: 100%;
+  height: 200px;
+  object-fit: contain;
+}
+.acss .col-4 h4 {
+  color: #333;
+  font-weight: normal;
+  font-size: 20px;
+}
+
+.acss.col-4 h4:hover {
+  font-weight: 500;
+}
+
+/**** FEATURED PRODUCTS *****/
 .title {
   text-align: center;
-  margin: 0 auto 80px ;
+  margin: 0px auto 80px ;
   line-height: 60px;
   color: #000;
   position: relative;
@@ -68,43 +226,352 @@ h4{
 }
 
 .products .col-4 {
-  flex-basis: 25%;
-  padding: 30px;
+  flex-basis: 23%;
+  margin: 10px;
+  padding: 5px;
   min-width: 200px;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
   border: 1px solid #fff;
-  transition: border .5s;
-  transition: transform .5s;
+  transition: all .3s ease-in-out;
+  position: relative;
+  background: rgb(238,238,238);
+  background: linear-gradient(0deg, rgba(238,238,238,0.47102591036414565) 35%, rgba(55,55,55,0.8519782913165266) 80%);
 }
-
+.products .col-4 h4 {
+  color: #333;
+  font-weight: normal;
+  font-size: 16px;
+  transition: all .3s ease-in-out;
+}
 .products .col-4:hover {
   border: 1px solid brown;
   transform: translateY(-20px);
 }
-
+.products .col-4:hover h4 {
+  font-weight: 500;
+}
 .products .col-4 img {
   width: 100%;
   height: 300px;
-  object-fit: contain;
+  object-fit: cover;
+  background: white;
 }
-
+.products .col-4 p .wishlist {
+  padding: 2px 5px;
+  background-color: rgba(15, 14, 14, 0.795);
+  font-size: 12px;
+  opacity: 0;
+  transition: all .2s ease-in-out;
+  color: #ffffff;
+}
+.products .col-4 a p {
+  margin: 2px 5px;
+}
+.products .col-4 a p:hover .wishlist {
+  opacity: 1;
+}
+.products .col-4 a p {
+  position: absolute;
+  color: #000;
+}
+.products .col-4 a p .bi-suit-heart {
+  opacity: 0;
+  color: rgb(0, 0, 0);
+}
+.products .col-4:hover .bi-suit-heart {
+  opacity: 1;
+  
+}
+.products .col-4 .bi-suit-heart:hover {
+  color: brown;
+}
 .products .col-4 .save {
   background-color: #bb0628;
   color: #fff;
   padding: 2px;
 }
-
-.products .col-4 h4 {
-  color: #333;
-  font-weight: normal;
-  font-size: 20px;
-}
-
-.products .col-4 h4:hover {
-  font-weight: 500;
-}
-
 .products .col-4 p {
   font-size: 15px;
+  margin: 0;
+}
+.rating {
+  color: brown;
+  margin-bottom: 3px;
+}
+.products .btn {
+  font-size: 14px;
+  padding: 5px 15px;
+  border: 1px solid #555;
+  border-radius: 0;
+  margin-bottom: 50px;
+}
+.products .btn:hover {
+  border: 1px solid brown;
+}
+.products .cart a {
+  color: #fff;
+  background-color: #000;
+  padding: 5px 15px;
+  font-size: 13px;
+  border: 1px solid rgb(0, 0, 0);
+  opacity: 0;
+  transition: opacity .4s ease-in-out;
+  transition: color .3s ease-in-out;
+  transition: background-color .3s ease-in-out;
+}
+.products .col-4:hover .cart a {
+  opacity: 1;
+}
+.products .cart a:hover {
+  color: #000;
+  background-color: #fff;
+}
+.products .product-price-cart {
+  margin-bottom: 5px;
 }
 
+
+/* **** TESTIMONIAL ****** */
+.testimonial {
+  margin-top: 100px;
+}
+
+.testimonial h3 {
+  margin-top: 10px;
+  font-size: 18px;
+}
+
+.testimonial p {
+  font-size: 12px;
+  color: #777;
+}
+
+.testimonial .bi-quote {
+  font-size: 45px;
+  color: brown;
+}
+.testimonial .col-tes {
+  text-align: center;
+  padding: 40px 20px;
+  cursor: pointer;
+  transition: all .3s ease-in-out;
+  box-shadow: 0 0 10px 0px rgba(0, 0, 0, 0.1);
+  margin: 20px;
+}
+
+.testimonial .col-tes:hover {
+  transform: translateY(-20px);
+}
+
+.testimonial img {
+  width: 50px;
+  height: 50px;
+  margin-top: 20px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+/* **** TESTIMONIAL ENDS ****** */
+
+
+/* **** BRANDS ****** */
+
+.brands {
+  margin: 50px 0;
+}
+
+.brands .col-5 {
+  flex-basis: 20%;
+  text-align: center!important;
+}
+
+.brands img {
+  width: 100px;
+  cursor: pointer;
+  filter: grayscale(100%);
+}
+
+.brands img:hover {
+  filter: grayscale(0);
+}
+
+/* **** BRANDS ENDS ****** */
+
+/******** MEDIA QUERIES **********/
+
+@media screen and (max-width: 576px) {
+  .banner .col-6 {
+      flex-basis: 100%;
+  }
+  .banner .col-6 h1 {
+      font-size: 30px;
+      line-height: 30px;
+  }
+  .banner .col-6 p {
+      font-size: 12px;
+  }
+  .components .col-4 {
+      flex-basis: 50%;
+  }
+
+  .products .row {
+      flex-direction: column;
+  }
+  .products .col-4 .cart a {
+      opacity: 1 !important;
+  }
+  .products .row .col-4{
+      width: 85%;
+      margin: 10px auto;
+      padding: 20px;
+      border: 1px solid rgb(165, 130, 130);
+  }
+  .products .view-more-btn {
+      justify-content: center!important;
+  }
+
+  .testimonial .row {
+      flex-direction: column;
+      justify-content: center;
+  }
+  .testimonial .row .col-3 {
+      text-align: center;
+      margin: 5px auto;
+  }
+}
+
+@media screen and (min-width: 577px) and (max-width: 768px) {
+  .banner .row-cols-md-2 {
+      padding: 25px 25px;
+  }
+  .banner .col-6 {
+      flex-basis: 100%;
+  }
+  .banner .col-6 h1 {
+      font-size: 35px;
+      line-height: 40px;
+  }
+  .banner .col-6 video {
+      padding: 5px 0;
+  }
+
+  .components .col-4 {
+      flex-basis: 50%;
+  }
+  
+  .products-dropdown {
+      text-align: center;
+      margin: 0 !important;
+      padding: 0 !important;
+  }
+  .products .row .col-4 .buy-me{
+      flex-wrap: wrap;
+  }
+  .products .row .col-4{
+      flex: 45%;
+      width: 100%;
+      margin: 10px;
+      padding: 20px;
+      border: 1px solid rgb(165, 130, 130);
+  }
+  .products .cart a {
+      opacity: 1;
+  }
+  .products .view-more-btn {
+      justify-content: center!important;
+  }
+
+  .testimonial .row {
+      flex-direction: row;
+      justify-content: center;
+  }
+
+  .testimonial .row .col-3 {
+      width: 30%;
+      text-align: center;
+      margin: 5px auto;
+  }
+}
+
+/* FTP ends */
+/* footer */
+.footer {
+  background-color: #000;
+}
+
+footer .col-3 {
+  text-align: center;
+  margin: 2px auto;
+  color: #fff;  
+}
+footer .links {
+  flex-basis: 15%;
+}
+footer .col-3 img {
+  width: 50%;
+}
+footer .col-3 p {
+  font-size: 13px;
+  text-align: left;
+}
+
+footer h6 {
+  font-size: 16px;
+}
+footer ul li {
+  text-align: center;
+  margin-bottom: 5px ;
+  font-size: 13px;
+}
+
+footer ul li a {
+  color: #777;
+  text-decoration: none;
+}
+footer ul li a:hover {
+  color: brown;
+}
+footer .col-3 .col-12 input {
+  border: 1px solid rgba(165, 42, 42, 0.418);
+}
+footer .col-3 .col-12 input:focus {
+  outline: none;
+}
+footer .col-3 .col-12 a {
+  border: 1px solid rgba(165, 42, 42, 0.418);
+  transition: all .2s ease-in-out;
+} 
+footer .col-3 .col-12 a:hover .bi-bell-fill {
+  color: brown;
+}
+footer hr {
+  border: none;
+  background-color: rgb(158, 158, 158);
+  height: 2px;
+  margin: 5px auto;
+}
+footer .row .col-3 .fs-6{
+  font-size: 12px!important;
+  color: #777;
+  margin-bottom: 5px;
+}
+
+@media screen and (max-width: 576px) {
+  footer .col-3 {
+      flex-basis: 100%;
+      margin-bottom: 20px;
+  }
+  footer .col-3 p {
+      text-align: center;
+  }
+}
+
+@media screen and (min-width: 577px) and (max-width: 768px) {
+  footer .col-3 {
+      flex-basis: 50%;
+      margin-bottom: 20px;
+  }
+  footer .col-3 p {
+      text-align: center;
+  }
+}
