--- a/pages/Accessories/styles/sub.css
+++ b/pages/Accessories/styles/sub.css
@@ -278,6 +278,7 @@ select{
   padding: 20px 36px;
   text-decoration: none;
   border-radius: 5px;
+  border: 1px solid rgb(206, 201, 201);
 }
 .pagination a.active {
   background-color: #4CAF50;
