--- a/pages/products/styles/product.css
+++ b/pages/products/styles/product.css
@@ -61,7 +61,16 @@ body {
     cursor: pointer;
 }
 .product-page .details-row {
-    padding-bottom: 150px;
+    margin-bottom: 150px;
+}
+.product-page .details-row .accordion-button {
+    background: rgb(255,255,255);
+background: linear-gradient(274deg, rgba(255,255,255,0.8939950980392157) 0%, rgba(0,0,0,0.7875525210084033) 37%, rgba(255,255,255,0.7399334733893557) 74%);
+}
+.product-page .details-row .accordion-button:focus {
+    background: rgb(255,255,255);
+    background: linear-gradient(274deg, rgba(255,255,255,0.7399334733893557) 37%, rgba(0,0,0,0.9612219887955182) 68%);
+    color:rgb(250, 250, 250)
 }
 .details-row .col-12 h3 {
     font-weight: 600;
@@ -71,6 +80,10 @@ body {
 }
 .specification-col-rows .col-6 {
     padding: 5px;
+}
+.bi-text-indent-left {
+    font-size: 16px;
+    color: brown;
 }
 
 
