--- a/pages/desktop/desktop.css
+++ b/pages/desktop/desktop.css
@@ -42,20 +42,18 @@ body {
 .sticky {
     position: fixed;
     top: 0;
-    background: rgb(82,80,80);
-    background: linear-gradient(140deg, rgba(82,80,80,1) 3%, rgba(255,255,255,1) 23%, rgba(5,5,5,0.8463760504201681) 45%, rgba(0,0,0,0.7455357142857143) 66%, rgba(139,139,139,0.8015581232492998) 86%);
+    background: rgba(0, 0, 0, 0.842);
     width: 100%;
-    z-index: 999;
-    
+    z-index: 999; 
 }
 
 .sticky nav .first-ul li {
     font-size: 17px;
-    color:#fff
 }
 
 .sticky img {
     width: 145px;
+    padding: 8px;
 }
 
 .navbar.sticky ul li a {
@@ -72,12 +70,6 @@ body {
     background: linear-gradient(342deg, rgba(0,0,0,0.9023984593837535) 50%, rgba(255,255,255,0) 100%);
     min-height: 760px;
     /* margin-top: -120px; */
-}
-
-.banner .col-6 video {
-    width: 100%;
-    padding: 60px 0;
-    border-radius: 50%;
 }
 
 .banner .col-6 h1{
@@ -425,7 +417,6 @@ body {
 }
 
 @media screen and (min-width: 769px) {
-
     
 }
 @media screen and (max-width: 576px) {
