--- a/pages/home/styles/header.css
+++ b/pages/home/styles/header.css
@@ -9,9 +9,12 @@ body {
 }
 
 .header {
-    background: rgba(255, 255, 255, 0);
+    background: rgba(0, 0, 0, 0.842);
     position: fixed;
     width: 100%;
+}
+.header img {
+    padding: 8px;
 }
 .header nav ul li {
     padding-left: 22px;
@@ -22,6 +25,7 @@ body {
 .header nav ul li a:hover {
     color: rgb(236, 115, 115); 
 }
+
 .header nav .checkbtn {
     font-size: 25px;
     background-color: #4d4c4c;
@@ -37,8 +41,7 @@ body {
 .header .large-screen-hidden {
     display: none;
 }
-/*---- JS script for sticky header extra class ----*/
-
+/*---- JS script extra class ----*/
 .sticky {
     position: fixed;
     top: 0;
@@ -46,7 +49,9 @@ body {
     width: 100%;
     z-index: 999;
     
+    
 }
+
 .sticky nav .first-ul li {
     font-size: 17px;
 }
@@ -55,6 +60,7 @@ body {
     width: 145px;
     padding: 8px;
 }
+
 .navbar.sticky ul li a {
     font-size: 12px;
     padding: 2px;
