--- a/pages/desktop/desktop.css
+++ b/pages/desktop/desktop.css
@@ -13,6 +13,9 @@ body {
     position: fixed;
     width: 100%;
 }
+.header img {
+    padding: 8px;
+}
 .header nav ul li {
     padding-left: 22px;
     color: #fff;
