--- a/pages/desktop/desktop.css
+++ b/pages/desktop/desktop.css
@@ -9,7 +9,7 @@ body {
 }
 
 .header {
-    background: rgba(255, 255, 255, 0);
+    background: rgba(0, 0, 0, 0.842);
     position: fixed;
     width: 100%;
 }
@@ -47,7 +47,7 @@ body {
     top: 0;
     background: rgba(0, 0, 0, 0.842);
     width: 100%;
-    z-index: 999; 
+    z-index: 999;
 }
 
 .sticky nav .first-ul li {
@@ -68,44 +68,43 @@ body {
 /*** HEADER AND NAVBAR ****/
 
 
-.section-1 {
-    background: rgb(0, 0, 0);
-    background: linear-gradient(342deg, rgba(0,0,0,0.9023984593837535) 50%, rgba(255,255,255,0) 100%);
-    min-height: 760px;
-    /* margin-top: -120px; */
+/*** HEADER AND NAVBAR ****/
+
+.navbar-toggler-icon {
+    filter: invert(100%)
 }
 
-.banner .col-6 h1{
-    color: #fff;
-    font-size: 50px;
-    line-height: 60px;
-    margin: 25px 0;
+.navbar-toggler {
+    color: rgba(255, 255, 255, 0.349);
+    font-size: 14px;
+    padding: 5px;
+    border-radius: 2px;
+}
+
+button,
+nav {
+    text-align: right;
+}
+
+nav ul li {
+    padding-left: 15px;
+    font-weight: 500;
     text-shadow: -1px 1px 19px rgba(0,0,0,0.49);
 }
 
-.banner .col-6 p {
-    font-size: 14px;
-    color: rgb(241, 241, 241);
-    text-shadow: -1px 1px 19px rgba(0,0,0,0.49);
+.nav-link {
+    color: rgb(255, 255, 255);
 }
 
-.banner .col-6 .btn, 
-.offer .col-6 .btn {
-    border: 1px solid #fff;
-    border-radius: 0;
-    color: #fff;
-    background-color: #000;
-    transition: .3s;
-    font-size: 14px;
-    margin: 12px 0;
-    transition: all .3s ease-in-out;
+.nav-link:focus {
+    color: rgb(255, 255, 255);
 }
 
-.banner .col-6 .btn:hover,
-.offer .col-6 .btn:hover {
-    color: #000;
-    background-color: #fff;
+.dropdown-menu {
+    background-color: rgb(68, 67, 67);
 }
+
+/*** HEADER AND NAVBAR ****/
 
 
 /* --------- Desktop Gaming --------- */
