--- a/pages/Accessories/styles/sub.css
+++ b/pages/Accessories/styles/sub.css
@@ -144,6 +144,27 @@ select{
 }
 /* HEADER END */
 
+.section-1 {
+  background: rgb(0, 0, 0);
+  background: linear-gradient(342deg, rgba(0,0,0,0.9023984593837535) 50%, rgba(255,255,255,0) 100%);
+  min-height: 400px;
+}
+.banner .col-12 p {
+  color: rgb(182, 182, 182);
+  font-size: 10px;
+  font-style: italic;
+  margin: 70px 0 0 0;
+}
+
+.banner .col-12 h2{
+  color: #fff;
+  font-size: 35px;
+  line-height: 47px;
+  margin: 30px 0 0 0;
+  text-shadow: -1px 1px 19px rgba(0,0,0,0.49);
+}
+
+
 .title {
   text-align: center;
   margin: 0 auto 80px ;
@@ -387,14 +408,19 @@ select{
   .products .view-more-btn {
       justify-content: center!important;
   }
-
-  .testimonial .row {
-      flex-direction: column;
-      justify-content: center;
+  .pagination {
+    justify-content: center;
   }
+
   .testimonial .row .col-3 {
-      text-align: center;
-      margin: 5px auto;
+    text-align: center;
+    margin: 5px auto;
+    flex-basis: 100%;
+    width: 75%;
+  }
+  .testimonial .row {
+    flex-direction: column;
+    justify-content: center;
   }
 }
 
@@ -438,98 +464,11 @@ select{
   .products .view-more-btn {
       justify-content: center!important;
   }
-
-  .testimonial .row {
-      flex-direction: row;
-      justify-content: center;
+  .pagination {
+    justify-content: center;
   }
 
-  .testimonial .row .col-3 {
-      width: 30%;
-      text-align: center;
-      margin: 5px auto;
-  }
 }
 
 /* FTP ends */
-/* footer */
-.footer {
-  background-color: #000;
-}
 
-footer .col-3 {
-  text-align: center;
-  margin: 2px auto;
-  color: #fff;  
-}
-footer .links {
-  flex-basis: 15%;
-}
-footer .col-3 img {
-  width: 50%;
-}
-footer .col-3 p {
-  font-size: 13px;
-  text-align: left;
-}
-
-footer h6 {
-  font-size: 16px;
-}
-footer ul li {
-  text-align: center;
-  margin-bottom: 5px ;
-  font-size: 13px;
-}
-
-footer ul li a {
-  color: #777;
-  text-decoration: none;
-}
-footer ul li a:hover {
-  color: brown;
-}
-footer .col-3 .col-12 input {
-  border: 1px solid rgba(165, 42, 42, 0.418);
-}
-footer .col-3 .col-12 input:focus {
-  outline: none;
-}
-footer .col-3 .col-12 a {
-  border: 1px solid rgba(165, 42, 42, 0.418);
-  transition: all .2s ease-in-out;
-} 
-footer .col-3 .col-12 a:hover .bi-bell-fill {
-  color: brown;
-}
-footer hr {
-  border: none;
-  background-color: rgb(158, 158, 158);
-  height: 2px;
-  margin: 5px auto;
-}
-footer .row .col-3 .fs-6{
-  font-size: 12px!important;
-  color: #777;
-  margin-bottom: 5px;
-}
-
-@media screen and (max-width: 576px) {
-  footer .col-3 {
-      flex-basis: 100%;
-      margin-bottom: 20px;
-  }
-  footer .col-3 p {
-      text-align: center;
-  }
-}
-
-@media screen and (min-width: 577px) and (max-width: 768px) {
-  footer .col-3 {
-      flex-basis: 50%;
-      margin-bottom: 20px;
-  }
-  footer .col-3 p {
-      text-align: center;
-  }
-}
