--- a/pages/components/case.html
+++ b/pages/components/case.html
@@ -41,7 +41,7 @@
                         </label>
                         <ul class="first-ul d-flex list-unstyled mb-0" id="mainmenu">
                             <li class="nav-item">
-                                <a href="#" class="nav-link ">Home</a>
+                                <a href="../home/home.html" class="nav-link ">Home</a>
                             </li>
                             <li class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle active" role="button" data-bs-toggle="dropdown" aria-expanded="false">
@@ -50,7 +50,7 @@
                                 <ul class="dropdown-menu dropdown-menu-dark">
                                     <li><a href="../Accessories/accessories.html" class="dropdown-item">Accessories</a></li>
                                     <li><a href="../components/components.html" class="dropdown-item active">Cards and Components</a></li>
-                                    <li><a href="#" class="dropdown-item">Desktops</a></li>
+                                    <li><a href="../desktop/desktop.html" class="dropdown-item">Desktops</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
