--- a/pages/components/components.html
+++ b/pages/components/components.html
@@ -29,7 +29,7 @@
                 <div class="col-6">
                     <div class="logo">
                         <a href="#">
-                            <img src="../home/images/logo2.png" width="150">
+                            <img src="../home/images/logo-white.png" width="150">
                         </a>
                     </div>
                 </div>
@@ -50,7 +50,7 @@
                                 <ul class="dropdown-menu dropdown-menu-dark">
                                     <li><a href="../Accessories/accessories.html" class="dropdown-item">Accessories</a></li>
                                     <li><a href="../components/components.html" class="dropdown-item active">Cards and Components</a></li>
-                                    <li><a href="#" class="dropdown-item">Desktops</a></li>
+                                    <li><a href="../desktop/desktop.html" class="dropdown-item">Desktops</a></li>
                                 </ul>
                             </li>
                             <li class="nav-item">
