--- a/pages/components/components.html
+++ b/pages/components/components.html
@@ -14,8 +14,8 @@
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="../components/styles/components.css">
-    <link rel="stylesheet" href="../components/styles/header.css">
-    <link rel="stylesheet" href="../components/styles/footer.css">
+    <link rel="stylesheet" href="../home/styles/header.css">
+    <link rel="stylesheet" href="../home/styles/footer.css">
 
     <title>Computer Cards and Components - Shop and Game</title>
 </head>
