--- a/pages/contact/contact.css
+++ b/pages/contact/contact.css
@@ -50,8 +50,17 @@ body {
 }
 
 .form {
-    background-color: rgb(202, 202, 202);
+    background-color: rgb(59, 59, 59);
     height: 476px;
+}
+
+.form h3 {
+    color: #d3d3d3;
+}
+
+.form label {
+    font-size: 12px;
+    color: #d3d3d3;
 }
 
 .form 
